Fix deprecated 'Boolean' boxed constructor.